--- a/chemlab.html
+++ b/chemlab.html
@@ -177,7 +177,7 @@
     <div class="staticrypt-page">
         <div class="staticrypt-form">
             <div class="staticrypt-instructions">
-                <p class="staticrypt-title">Protected Page</p>
+                <p class="staticrypt-title">Chemistry LABS</p>
                 <p></p>
             </div>
 
